fix notifications div trigger on mobile screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -693,7 +693,7 @@ body{
 
 .notifications-div-wrapper, .modal-div-wrapper{
   position: fixed;
-  top: -100vw;
+  top: -150vh;
   background: rgba(255, 255, 255, .9);
   left: 0;
   z-index: 300;
